--- a/features/Clarinet.base.toml
+++ b/features/Clarinet.base.toml
@@ -16,10 +16,6 @@ depends_on = [
   "alex-reserve-pool"
 ]
 
-[contracts.alex-staking-helper]
-path = "contracts/helpers/alex-staking-helper.clar"
-depends_on = ["alex-reserve-pool","token-t-alex"]
-
 [contracts.staking-helper]
 path = "contracts/helpers/staking-helper.clar"
 depends_on = ["alex-reserve-pool", "trait-sip-010"]
@@ -40,22 +36,34 @@ path = "contracts/pool/collateral-rebalancing-pool.clar"
 depends_on = [
   "trait-sip-010",
   "trait-vault",
+  "alex-vault",
   "math-fixed-point",
   "weighted-equation",
   "fixed-weight-pool",
   "token-usda",
   "alex-reserve-pool",
-  "yield-token-pool",
-  "alex-vault"
+  "yield-token-pool"
 ]
 
 [contracts.yield-collateral-rebalancing-pool]
 path = "contracts/pool/yield-collateral-rebalancing-pool.clar"
-depends_on = ["trait-sip-010", "trait-vault", "math-fixed-point", "weighted-equation", "fixed-weight-pool", "token-usda", "alex-reserve-pool", "yield-token-pool"]
+depends_on = ["trait-sip-010",
+  "trait-vault",
+  "math-fixed-point",
+  "weighted-equation",
+  "fixed-weight-pool",
+  "token-usda",
+  "alex-reserve-pool",
+  "yield-token-pool"
+]
 
 [contracts.faucet]
 path = "contracts/faucet.clar"
-depends_on = [ "token-wbtc", "token-usda", "token-t-alex", "token-wstx" ]
+depends_on = [ "token-wbtc",
+  "token-usda",
+  "token-t-alex",
+  "token-wstx"
+]
 
 [contracts.fixed-weight-pool]
 path = "contracts/pool/fixed-weight-pool.clar"
@@ -104,6 +112,11 @@ depends_on = [ "trait-sip-010", "trait-ownable" ]
 path = "contracts/pool-token/fwp-wstx-wbtc-50-50.clar"
 depends_on = [ "trait-sip-010", "trait-ownable" ]
 
+[contracts.fwp-wstx-talex-50-50]
+path = "contracts/pool-token/fwp-wstx-talex-50-50.clar"
+depends_on = [ "trait-sip-010", "trait-ownable" ]
+
+
 [contracts.key-usda-wbtc]
 path = "contracts/key-token/key-usda-wbtc.clar"
 depends_on = [ "trait-ownable", "trait-semi-fungible" ]
@@ -151,8 +164,15 @@ depends_on = [ "yield-usda", "key-usda-wstx", "collateral-rebalancing-pool" ]
 [contracts.multisig-fwp-wstx-usda-50-50]
 path = "contracts/multisig/multisig-fwp-wstx-usda-50-50.clar"
 depends_on = [
-  "fwp-wstx-wbtc-50-50",
   "fwp-wstx-usda-50-50",
+  "math-fixed-point",
+  "fixed-weight-pool"
+]
+
+[contracts.multisig-fwp-wstx-talex-50-50]
+path = "contracts/multisig/multisig-fwp-wstx-talex-50-50.clar"
+depends_on = [
+  "fwp-wstx-talex-50-50",
   "math-fixed-point",
   "fixed-weight-pool"
 ]
@@ -161,7 +181,6 @@ depends_on = [
 path = "contracts/multisig/multisig-fwp-wstx-wbtc-50-50.clar"
 depends_on = [
   "fwp-wstx-wbtc-50-50",
-  "fwp-wstx-usda-50-50",
   "math-fixed-point",
   "fixed-weight-pool"
 ]
@@ -330,10 +349,26 @@ depends_on = [
 path = "contracts/lottery-tokens/lottery-t-alex.clar"
 depends_on = ["trait-ownable", "trait-sip-010"]
 
-[contracts.alex-staking-helper-laplace]
-path = "contracts/helpers/alex-staking-helper-laplace.clar"
-depends_on = ["alex-reserve-pool"]
+[contracts.token-unauthorised]
+path = "contracts/tests/token-unauthorised.clar"
+depends_on = [ "trait-ownable", "trait-sip-010" ]
 
-[contracts.test-pool-token]
-path = "contracts/pool-token/test-pool-token.clar"
-depends_on = ["trait-sip-010", "trait-sip-010", "trait-ownable"]
+[contracts.flash-loan-user-unauthorised]
+path = "contracts/tests/flash-loan-user-unauthorised.clar"
+depends_on = [ "trait-flash-loan-user" ]
+
+[contracts.math-fixed-point-16]
+path = "contracts/lib/math-fixed-point-16.clar"
+depends_on = ["math-log-exp-16"]
+
+[contracts.math-log-exp-16]
+path = "contracts/lib/math-log-exp-16.clar"
+depends_on = []
+
+[contracts.faucet-helper]
+path = "contracts/helpers/faucet-helper.clar"
+depends_on = [ "faucet" ]
+
+[contracts.exchange]
+path = "contracts/exchange.clar"
+depends_on = [ "trait-ownable", "token-t-alex" ]
