fix action typo

--- a/.github/workflows/ci-clarinet.yml
+++ b/.github/workflows/ci-clarinet.yml
@@ -27,7 +27,7 @@ jobs:
           cache: 'yarn'
       - run: yarn install
       - name: select feature
-        run: yarn use ${{{ github.event.inputs.feature }}}
+        run: yarn use ${{ github.event.inputs.feature }}}
       - name: "Check contract"
         uses: docker://hirosystems/clarinet:0.20.0
         with:
