--- a/.github/workflows/ci-clarinet.yml
+++ b/.github/workflows/ci-clarinet.yml
@@ -26,6 +26,16 @@ jobs:
         with:
           node-version: '16.13.0'
           cache: 'yarn'
+      - name: Get yarn cache directory path
+        id: yarn-cache-dir-path
+        run: echo "::set-output name=dir::$(yarn cache dir)"
+      - uses: actions/cache@v2
+        id: yarn-cache # use this to check for `cache-hit` (`steps.yarn-cache.outputs.cache-hit != 'true'`)
+        with:
+          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-
       - run: yarn install
       - name: select feature
         run: yarn select ${{ github.event.inputs.feature }}}
