--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Clarity History
 clarity/history.txt
 clarity/.vscode
+clarity/coverage.lcov
 
 deployContracts-keychain.json
 **/contract-records/
