--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   "scripts": {
     "select": "ts-node features/select.ts",
     "deployContracts": "ts-node features/deployContracts.ts",
-    "gen:errorCode": "ts-node features/errorCode.ts"
+    "gen:errorCode": "ts-node features/errorCode.ts",
+    "check": "cd clarity && clarinet check",
+    "test": "cd clarity && clarinet test --coverage"
   },
   "dependencies": {
     "@iarna/toml": "^2.2.5",
