--- a/package.json
+++ b/package.json
@@ -40,8 +40,10 @@
     "@types/coingecko-api": "^1.0.5",
     "@types/jest": "^27.0.3",
     "@types/yargs": "^17.0.7",
+    "@types/fs-extra": "^9.0.13",
     "jest": "^27.4.5",
     "prettier": "^2.5.1",
+    "fs-extra": "^10.0.0",
     "ts-jest": "^27.1.1"
   },
   "engines": {
