--- a/.github/workflows/ci-clarinet.yml
+++ b/.github/workflows/ci-clarinet.yml
@@ -5,10 +5,7 @@ name: CI Clarinet
 
 # Controls when the action will run.
 on:
-  pull_request:
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
+  push:
 
 concurrency:
   group: 'ci-${{ github.ref }}'
