--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -318,7 +318,7 @@ depends_on = [ "trait-ownable", "trait-semi-fungible" ]
 
 [contracts.alex-launchpad]
 path = "contracts/pool/alex-launchpad.clar"
-depends_on = [ "trait-ownable", "trait-sip-010", "token-wstx" ]
+depends_on = [ "trait-ownable", "trait-sip-010", "token-wstx", "executor-dao" ]
 
 [contracts.staked-alex]
 path = "contracts/staked-token/staked-alex.clar"
@@ -420,6 +420,6 @@ depends_on = []
 path = "../executor-dao/contracts/traits/sip010-ft-trait.clar"
 depends_on = []
 
-[contracts.agp002-launchpad-alex]
-path = "../executor-dao/contracts/proposals/agp002-launchpad-alex.clar"
+[contracts.agp003-launchpad-alex]
+path = "../executor-dao/contracts/proposals/agp003-launchpad-alex.clar"
 depends_on = ["proposal-trait", "alex-launchpad", "lottery-ido-alex", "age000-governance-token"]
