--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -111,8 +111,8 @@ depends_on = [ "trait-sip-010", "trait-ownable" ]
 path = "contracts/pool-token/fwp-wstx-wbtc-50-50.clar"
 depends_on = [ "trait-sip-010", "trait-ownable" ]
 
-[contracts.fwp-wstx-talex-50-50]
-path = "contracts/pool-token/fwp-wstx-talex-50-50.clar"
+[contracts.fwp-wstx-alex-50-50]
+path = "contracts/pool-token/fwp-wstx-alex-50-50.clar"
 depends_on = [ "trait-sip-010", "trait-ownable" ]
 
 [contracts.key-usda-wbtc]
@@ -164,10 +164,10 @@ depends_on = [
   "fixed-weight-pool"
 ]
 
-[contracts.multisig-fwp-wstx-talex-50-50]
-path = "contracts/multisig/multisig-fwp-wstx-talex-50-50.clar"
+[contracts.multisig-fwp-wstx-alex-50-50]
+path = "contracts/multisig/multisig-fwp-wstx-alex-50-50.clar"
 depends_on = [
-  "fwp-wstx-talex-50-50",
+  "fwp-wstx-alex-50-50",
   "fixed-weight-pool"
 ]
 
