--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = https://github.com/alexgo-io/executor-dao.git
 [submodule "alex-dao"]
 	path = alex-dao
-	url = https://github.com/alexgo-io/alex-dao
+	url = https://github.com/alexgo-io/alex-dao.git
