--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -2,6 +2,7 @@
 name = "alex-v1"
 requirements = [ ]
 costs_version = 2
+analysis = [ ]
 
 [contracts.alex-reserve-pool]
 path = "contracts/pool/alex-reserve-pool.clar"
