--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "alex-dao"]
 	path = alex-dao
 	url = https://github.com/alexgo-io/alex-dao.git
+[submodule "alex-v1.01"]
+	path = alex-v1.01
+	url = https://github.com/alexgo-io/alex-v1.01.git
