--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -43,8 +43,8 @@ depends_on = [
   "trait-sip-010",
   "trait-vault",
   "alex-vault",
-  "weighted-equation",
-  "fixed-weight-pool",
+  "weighted-equation-v1-01",
+  "fixed-weight-pool-v1-01",
   "alex-reserve-pool",
   "yield-token-pool"
 ]
@@ -54,8 +54,8 @@ path = "contracts/pool/yield-collateral-rebalancing-pool.clar"
 depends_on = [
   "trait-sip-010",
   "trait-vault",
-  "weighted-equation",
-  "fixed-weight-pool",
+  "weighted-equation-v1-01",
+  "fixed-weight-pool-v1-01",
   "alex-reserve-pool",
   "yield-token-pool"
 ]
@@ -63,17 +63,6 @@ depends_on = [
 [contracts.faucet]
 path = "contracts/faucet.clar"
 depends_on = [ "token-xbtc", "token-usda", "age000-governance-token", "token-wstx" ]
-
-[contracts.fixed-weight-pool]
-path = "contracts/pool/fixed-weight-pool.clar"
-depends_on = [
-  "alex-vault",
-  "trait-sip-010",
-  "trait-vault",
-  "weighted-equation",
-  "alex-reserve-pool",
-  "token-wstx"
-]
 
 [contracts.flash-loan-user-margin-usda-wbtc]
 path = "contracts/flash-loan-user-margin-usda-wbtc.clar"
@@ -84,7 +73,7 @@ depends_on = [
   "key-wbtc-usda",
   "collateral-rebalancing-pool",
   "yield-token-pool",
-  "fixed-weight-pool",
+  "fixed-weight-pool-v1-01",
   "token-usda",
   "token-wbtc"
 ]
@@ -99,7 +88,7 @@ depends_on = [
   "key-usda-wstx",
   "collateral-rebalancing-pool",
   "yield-token-pool",
-  "fixed-weight-pool",
+  "fixed-weight-pool-v1-01",
   "token-wstx",
   "token-usda"  
 ]
@@ -129,9 +118,9 @@ path = "contracts/pool/liquidity-bootstrapping-pool.clar"
 depends_on = [
   "trait-sip-010",
   "trait-vault",
-  "weighted-equation",
+  "weighted-equation-v1-01",
   "alex-reserve-pool",
-  "fixed-weight-pool",
+  "fixed-weight-pool-v1-01",
   "trait-multisig-vote",
   "alex-vault"
 ]
@@ -142,7 +131,7 @@ depends_on = [
   "trait-sip-010",
   "trait-flash-loan-user",
   "collateral-rebalancing-pool",
-  "fixed-weight-pool",
+  "fixed-weight-pool-v1-01",
   "alex-vault"
 ]
 
@@ -162,21 +151,21 @@ depends_on = [ "yield-usda", "key-usda-wstx", "collateral-rebalancing-pool" ]
 path = "contracts/multisig/multisig-fwp-wstx-usda-50-50.clar"
 depends_on = [
   "fwp-wstx-usda-50-50",
-  "fixed-weight-pool"
+  "fixed-weight-pool-v1-01"
 ]
 
 [contracts.multisig-fwp-wstx-alex-50-50]
 path = "contracts/multisig/multisig-fwp-wstx-alex-50-50.clar"
 depends_on = [
   "fwp-wstx-alex-50-50",
-  "fixed-weight-pool"
+  "fixed-weight-pool-v1-01"
 ]
 
 [contracts.multisig-fwp-wstx-wbtc-50-50]
 path = "contracts/multisig/multisig-fwp-wstx-wbtc-50-50.clar"
 depends_on = [
   "fwp-wstx-wbtc-50-50",
-  "fixed-weight-pool"
+  "fixed-weight-pool-v1-01"
 ]
 
 [contracts.multisig-ytp-yield-wbtc]
@@ -231,10 +220,6 @@ depends_on = [ ]
 path = "contracts/traits/trait-vault.clar"
 depends_on = [ "trait-sip-010", "trait-flash-loan-user" ]
 
-[contracts.weighted-equation]
-path = "contracts/equations/weighted-equation.clar"
-depends_on = [ ]
-
 [contracts.yield-token-equation]
 path = "contracts/equations/yield-token-equation.clar"
 depends_on = [ ]
@@ -248,7 +233,7 @@ depends_on = [
   "trait-flash-loan-user",
   "yield-token-equation",
   "trait-semi-fungible",
-  "fixed-weight-pool",
+  "fixed-weight-pool-v1-01",
   "alex-reserve-pool",
   "trait-multisig-vote"
 ]
@@ -344,7 +329,7 @@ depends_on = [
   "key-usda-wbtc",
   "collateral-rebalancing-pool",
   "yield-token-pool",
-  "fixed-weight-pool",
+  "fixed-weight-pool-v1-01",
   "multisig-ytp-yield-wbtc",
   "multisig-ytp-yield-usda"
 ]
@@ -444,7 +429,7 @@ depends_on = [
   "key-wstx-wbtc",
   "collateral-rebalancing-pool",
   "yield-token-pool",
-  "fixed-weight-pool",
+  "fixed-weight-pool-v1-01",
   "multisig-ytp-yield-wbtc",
   "multisig-ytp-yield-wstx"
 ]
@@ -472,3 +457,48 @@ depends_on = [ "trait-ownable", "trait-semi-fungible" ]
 [contracts.token-t-alex]
 path = "contracts/token/token-t-alex.clar"
 depends_on = [ "trait-ownable", "trait-sip-010" ]
+
+[contracts.weighted-equation]
+path = "contracts/equations/weighted-equation.clar"
+depends_on = [ ]
+
+[contracts.fixed-weight-pool]
+path = "contracts/pool/fixed-weight-pool.clar"
+depends_on = [
+  "alex-vault",
+  "trait-sip-010",
+  "trait-vault",
+  "weighted-equation",
+  "alex-reserve-pool",
+  "token-wstx"
+]
+
+[contracts.weighted-equation-v1-01]
+path = "../alex-v1.01/equations/weighted-equation-v1-01.clar"
+depends_on = [ ]
+
+[contracts.fixed-weight-pool-v1-01]
+path = "../alex-v1.01/pool/fixed-weight-pool-v1-01.clar"
+depends_on = [
+  "alex-vault",
+  "trait-sip-010",
+  "trait-vault",
+  "weighted-equation-v1-01",
+  "alex-reserve-pool",
+  "token-wstx"
+]
+
+[contracts.fwp-wstx-alex-50-50-v1-01]
+path = "../alex-v1.01/pool-token/fwp-wstx-alex-50-50-v1-01.clar"
+depends_on = [ "trait-sip-010", "trait-ownable" ]
+
+[contracts.multisig-fwp-wstx-alex-50-50-v1-01]
+path = "../alex-v1.01/multisig/multisig-fwp-wstx-alex-50-50-v1-01.clar"
+depends_on = [
+  "fwp-wstx-alex-50-50-v1-01",
+  "fixed-weight-pool-v1-01"
+]
+
+[contracts.migration-helper-v1-01]
+path = "../alex-v1.01/helpers/migration-helper-v1-01.clar"
+depends_on = [ "fixed-weight-pool", "fixed-weight-pool-v1-01", "token-wstx", "age000-governance-token", "fwp-wstx-alex-50-50", "fwp-wstx-alex-50-50-v1-01", "multisig-fwp-wstx-alex-50-50-v1-01" ]
