--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -151,21 +151,21 @@ depends_on = [ "yield-usda", "key-usda-wstx", "collateral-rebalancing-pool" ]
 path = "contracts/multisig/multisig-fwp-wstx-usda-50-50.clar"
 depends_on = [
   "fwp-wstx-usda-50-50",
-  "fixed-weight-pool-v1-01"
+  "fixed-weight-pool"
 ]
 
 [contracts.multisig-fwp-wstx-alex-50-50]
 path = "contracts/multisig/multisig-fwp-wstx-alex-50-50.clar"
 depends_on = [
   "fwp-wstx-alex-50-50",
-  "fixed-weight-pool-v1-01"
+  "fixed-weight-pool"
 ]
 
 [contracts.multisig-fwp-wstx-wbtc-50-50]
 path = "contracts/multisig/multisig-fwp-wstx-wbtc-50-50.clar"
 depends_on = [
   "fwp-wstx-wbtc-50-50",
-  "fixed-weight-pool-v1-01"
+  "fixed-weight-pool"
 ]
 
 [contracts.multisig-ytp-yield-wbtc]
@@ -499,6 +499,40 @@ depends_on = [
   "fixed-weight-pool-v1-01"
 ]
 
-[contracts.migration-helper-v1-01]
-path = "../alex-v1.01/helpers/migration-helper-v1-01.clar"
-depends_on = [ "fixed-weight-pool", "fixed-weight-pool-v1-01", "token-wstx", "age000-governance-token", "fwp-wstx-alex-50-50", "fwp-wstx-alex-50-50-v1-01", "multisig-fwp-wstx-alex-50-50-v1-01" ]
+[contracts.fwp-wstx-wbtc-50-50-v1-01]
+path = "../alex-v1.01/pool-token/fwp-wstx-wbtc-50-50-v1-01.clar"
+depends_on = [ "trait-sip-010", "trait-ownable" ]
+
+[contracts.multisig-fwp-wstx-wbtc-50-50-v1-01]
+path = "../alex-v1.01/multisig/multisig-fwp-wstx-wbtc-50-50-v1-01.clar"
+depends_on = [
+  "fwp-wstx-wbtc-50-50-v1-01",
+  "fixed-weight-pool-v1-01"
+]
+
+[contracts.fwp-wstx-usda-50-50-v1-01]
+path = "../alex-v1.01/pool-token/fwp-wstx-usda-50-50-v1-01.clar"
+depends_on = [ "trait-sip-010", "trait-ownable" ]
+
+[contracts.multisig-fwp-wstx-usda-50-50-v1-01]
+path = "../alex-v1.01/multisig/multisig-fwp-wstx-usda-50-50-v1-01.clar"
+depends_on = [
+  "fwp-wstx-usda-50-50-v1-01",
+  "fixed-weight-pool-v1-01"
+]
+
+[contracts.migration-helper-all-v1-01]
+path = "../alex-v1.01/helpers/migration-helper-all-v1-01.clar"
+depends_on = [ 
+  "fixed-weight-pool", 
+  "fixed-weight-pool-v1-01", 
+  "token-wstx", 
+  "token-wbtc", 
+  "fwp-wstx-wbtc-50-50", 
+  "fwp-wstx-wbtc-50-50-v1-01", 
+  "multisig-fwp-wstx-wbtc-50-50-v1-01",
+  "age000-governance-token", 
+  "fwp-wstx-alex-50-50", 
+  "fwp-wstx-alex-50-50-v1-01", 
+  "multisig-fwp-wstx-alex-50-50-v1-01" 
+]
