--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -480,6 +480,19 @@ depends_on = [
   "token-wstx"
 ]
 
+[contracts.fixed-weight-pool-v1-01a]
+path = "contracts/pool/fixed-weight-pool-v1-01a.clar"
+depends_on = [
+  "alex-vault",
+  "trait-sip-010",
+  "trait-vault",
+  "weighted-equation-v1-01",
+  "fixed-weight-pool-v1-01",
+  "alex-reserve-pool",
+  "age000-governance-token",
+  "token-wstx"
+]
+
 [contracts.fwp-wstx-alex-50-50-v1-01]
 path = "contracts/pool-token/fwp-wstx-alex-50-50-v1-01.clar"
 depends_on = [ "trait-sip-010", "trait-ownable" ]
