--- a/Clarinet.toml
+++ b/Clarinet.toml
@@ -25,3 +25,8 @@ depends_on = []
 [contracts.wrapped-stx]
 path = "contracts/wrapped-stx.clar"
 depends_on = []
+
+[contracts.trait-sip-010]
+path = "alex-v1/clarity/contracts/traits/trait-sip-010.clar"
+depends_on = [ ]
+
