--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "winners-list": "esrun scripts/winners-list.ts"
+    "determine-winners": "esrun scripts/determine-winners.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@digitak/esrun": "^3.1.2"
+    "@digitak/esrun": "^3.1.2",
+    "@types/node": "^17.0.18"
   }
 }
