fix: refund-fallback takes ft-trait and folds over the list to pay

--- a/Clarinet.toml
+++ b/Clarinet.toml
@@ -27,6 +27,6 @@ path = "contracts/wrapped-stx.clar"
 depends_on = ["trait-sip-010"]
 
 [contracts.trait-sip-010]
-path = "alex-v1/clarity/contracts/traits/trait-sip-010.clar"
+path = "../clarity/contracts/traits/trait-sip-010.clar"
 depends_on = [ ]
 
