--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
   "devDependencies": {
     "@digitak/esrun": "^3.1.2",
     "@types/node": "^17.0.18"
+  },
+  "dependencies": {
+    "mathjs": "^10.1.1",
+    "maths.ts": "^0.0.8"
   }
 }
