--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -1,8 +1,10 @@
 [project]
 name = "alex-v1"
 requirements = [ ]
+
+[repl]
 costs_version = 2
-analysis = [ ]
+analysis.passes = [ ]
 
 [contracts.alex-reserve-pool]
 path = "contracts/pool/alex-reserve-pool.clar"
