--- a/.github/workflows/ci-clarinet.yaml
+++ b/.github/workflows/ci-clarinet.yaml
@@ -21,18 +21,14 @@ jobs:
         uses: docker://hirosystems/clarinet:0.20.0
         with:
           entrypoint: "bash"
-          args: -c "cd clarity && clarinet check"
+          args: -c "clarinet check"
   test:
     name: test - ${{ github.ref_name }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: "Set CI env"
-        run: |
-          echo "ci_env=$(bash <(curl -s https://codecov.io/env))" >> $GITHUB_ENV
       - name: "Execute test suite"
         uses: docker://hirosystems/clarinet:0.20.0
         with:
           entrypoint: "bash"
-          #args: -c "cd clarity && clarinet test --coverage && curl -Os https://uploader.codecov.io/latest/linux/codecov && chmod +x codecov && ./codecov -t ${{ secrets.CODECOV_TOKEN }} -f coverage.lcov"
-          args: -c "cd clarity && clarinet test --coverage"
+          args: -c "clarinet test"
