--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -524,3 +524,7 @@ depends_on = [ "auto-alex", "age000-governance-token", "trait-ownable", "alex-re
 [contracts.fwp-alex-wbtc-50-50]
 path = "contracts/pool-token/fwp-alex-wbtc-50-50.clar"
 depends_on = [ "trait-sip-010", "trait-ownable" ]
+
+[contracts.swap-helper]
+path = "contracts/helpers/swap-helper.clar"
+depends_on = [ "trait-sip-010", "fixed-weight-pool", "fixed-weight-pool-alex" ]
