--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -559,4 +559,8 @@ depends_on = [ "trait-ownable", "trait-sip-010" ]
 
 [contracts.token-wban]
 path = "contracts/wrapped-token/token-wban.clar"
-depends_on = [ "trait-ownable", "trait-sip-010", "token-banana" ]
+depends_on = [ "trait-ownable", "trait-sip-010", "token-banana", "trait-ido-ft" ]
+
+[contracts.trait-ido-ft]
+path = "contracts/traits/trait-ido-ft.clar"
+depends_on = [ ]
