--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -45,8 +45,7 @@ depends_on = [
   "trait-sip-010",
   "trait-vault",
   "alex-vault",
-  "weighted-equation",
-  "fixed-weight-pool",
+  "simple-weight-pool",
   "alex-reserve-pool",
   "yield-token-pool",
   "yield-usda",
@@ -527,7 +526,7 @@ depends_on = [ "trait-sip-010", "trait-ownable" ]
 
 [contracts.swap-helper]
 path = "contracts/helpers/swap-helper.clar"
-depends_on = [ "trait-sip-010", "fixed-weight-pool", "simple-weight-pool-alex" ]
+depends_on = [ "trait-sip-010", "fixed-weight-pool", "simple-weight-pool", "simple-weight-pool-alex" ]
 
 [contracts.simple-equation]
 path = "contracts/equations/simple-equation.clar"
@@ -540,17 +539,16 @@ depends_on = [
   "trait-sip-010",
   "trait-vault",
   "simple-equation",
-  "fixed-weight-pool",
   "alex-reserve-pool",
   "age000-governance-token",
-  "token-wstx"
 ]
 
 [contracts.multisig-fwp-alex-usda-simple]
 path = "contracts/multisig/multisig-fwp-alex-usda-simple.clar"
 depends_on = [
   "fwp-alex-usda-50-50",
-  "simple-weight-pool-alex"
+  "simple-weight-pool-alex",
+  "trait-multisig-vote"
 ]
 
 [contracts.alex-launchpad-v1-1]
@@ -568,3 +566,22 @@ depends_on = [ "trait-ownable", "trait-sip-010", "token-banana", "trait-ido-ft" 
 [contracts.trait-ido-ft]
 path = "contracts/traits/trait-ido-ft.clar"
 depends_on = [ ]
+
+[contracts.simple-weight-pool]
+path = "contracts/pool/simple-weight-pool.clar"
+depends_on = [
+  "alex-vault",
+  "trait-sip-010",
+  "trait-vault",
+  "simple-equation",
+  "alex-reserve-pool",
+  "token-wstx",
+]
+
+[contracts.multisig-fwp-wstx-usda-simple]
+path = "contracts/multisig/multisig-fwp-wstx-usda-simple.clar"
+depends_on = [
+  "fwp-wstx-usda-50-50",
+  "simple-weight-pool",
+  "trait-multisig-vote"
+]
