--- a/.github/workflows/ci-clarinet.yaml
+++ b/.github/workflows/ci-clarinet.yaml
@@ -18,17 +18,21 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: "Check contract"
-        uses: docker://hirosystems/clarinet:0.20.0
+        uses: docker://hirosystems/clarinet:0.27.0
         with:
           entrypoint: "bash"
-          args: -c "clarinet check"
+          args: -c "cd clarity && clarinet check"
   test:
     name: test - ${{ github.ref_name }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - name: "Set CI env"
+        run: |
+          echo "ci_env=$(bash <(curl -s https://codecov.io/env))" >> $GITHUB_ENV
       - name: "Execute test suite"
-        uses: docker://hirosystems/clarinet:0.20.0
+        uses: docker://hirosystems/clarinet:0.27.0
         with:
           entrypoint: "bash"
-          args: -c "clarinet test"
+          #args: -c "cd clarity && clarinet test --coverage && curl -Os https://uploader.codecov.io/latest/linux/codecov && chmod +x codecov && ./codecov -t ${{ secrets.CODECOV_TOKEN }} -f coverage.lcov"
+          args: -c "cd clarity && clarinet test --coverage"
