--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -56,8 +56,8 @@ path = "contracts/pool/yield-collateral-rebalancing-pool.clar"
 depends_on = [
   "trait-sip-010",
   "trait-vault",
-  "weighted-equation",
-  "fixed-weight-pool",
+  "weighted-equation-v1-01",
+  "fixed-weight-pool-v1-01",
   "alex-reserve-pool",
   "yield-token-pool"
 ]
@@ -75,7 +75,7 @@ depends_on = [
   "key-wbtc-usda",
   "collateral-rebalancing-pool",
   "yield-token-pool",
-  "fixed-weight-pool",
+  "fixed-weight-pool-v1-01",
   "token-usda",
   "token-wbtc"
 ]
@@ -90,7 +90,7 @@ depends_on = [
   "key-usda-wstx",
   "collateral-rebalancing-pool",
   "yield-token-pool",
-  "fixed-weight-pool",
+  "fixed-weight-pool-v1-01",
   "token-wstx",
   "token-usda"  
 ]
@@ -108,9 +108,9 @@ path = "contracts/pool/liquidity-bootstrapping-pool.clar"
 depends_on = [
   "trait-sip-010",
   "trait-vault",
-  "weighted-equation",
+  "weighted-equation-v1-01",
   "alex-reserve-pool",
-  "fixed-weight-pool",
+  "fixed-weight-pool-v1-01",
   "trait-multisig-vote",
   "alex-vault"
 ]
@@ -202,7 +202,7 @@ depends_on = [
   "trait-flash-loan-user",
   "yield-token-equation",
   "trait-semi-fungible",
-  "fixed-weight-pool",
+  "fixed-weight-pool-v1-01",
   "alex-reserve-pool",
   "trait-multisig-vote"
 ]
@@ -288,8 +288,8 @@ depends_on = [ "trait-ownable", "trait-sip-010", "token-wstx", "executor-dao" ]
 path = "contracts/staked-token/staked-alex.clar"
 depends_on = [ "trait-ownable", "trait-semi-fungible" ]
 
-[contracts.staked-fwp-wstx-alex-50-50]
-path = "contracts/staked-token/staked-fwp-wstx-alex-50-50.clar"
+[contracts.staked-fwp-wstx-alex-50-50-v1-01]
+path = "contracts/staked-token/staked-fwp-wstx-alex-50-50-v1-01.clar"
 depends_on = [ "trait-ownable", "trait-semi-fungible" ]
 
 [contracts.flash-loan-user-margin-wbtc-usda]
@@ -402,7 +402,7 @@ depends_on = [
   "key-wstx-wbtc",
   "collateral-rebalancing-pool",
   "yield-token-pool",
-  "fixed-weight-pool",
+  "fixed-weight-pool-v1-01",
   "multisig-ytp-yield-wbtc",
   "multisig-ytp-yield-wstx"
 ]
@@ -431,17 +431,17 @@ depends_on = [ "trait-ownable", "trait-semi-fungible" ]
 path = "contracts/token/token-t-alex.clar"
 depends_on = [ "trait-ownable", "trait-sip-010" ]
 
-[contracts.weighted-equation]
-path = "contracts/equations/weighted-equation.clar"
+[contracts.weighted-equation-v1-01]
+path = "contracts/equations/weighted-equation-v1-01.clar"
 depends_on = [ ]
 
-[contracts.fixed-weight-pool]
-path = "contracts/pool/fixed-weight-pool.clar"
+[contracts.fixed-weight-pool-v1-01]
+path = "contracts/pool/fixed-weight-pool-v1-01.clar"
 depends_on = [
   "alex-vault",
   "trait-sip-010",
   "trait-vault",
-  "weighted-equation",
+  "weighted-equation-v1-01",
   "alex-reserve-pool",
   "token-wstx"
 ]
@@ -452,33 +452,33 @@ depends_on = [
   "alex-vault",
   "trait-sip-010",
   "trait-vault",
-  "weighted-equation",
-  "fixed-weight-pool",
+  "weighted-equation-v1-01",
+  "fixed-weight-pool-v1-01",
   "alex-reserve-pool",
   "age000-governance-token",
   "token-wstx"
 ]
 
-[contracts.fwp-wstx-alex-50-50]
-path = "contracts/pool-token/fwp-wstx-alex-50-50.clar"
+[contracts.fwp-wstx-alex-50-50-v1-01]
+path = "contracts/pool-token/fwp-wstx-alex-50-50-v1-01.clar"
 depends_on = [ "trait-sip-010", "trait-ownable" ]
 
-[contracts.multisig-fwp-wstx-alex-50-50]
-path = "contracts/multisig/multisig-fwp-wstx-alex-50-50.clar"
+[contracts.multisig-fwp-wstx-alex-50-50-v1-01]
+path = "contracts/multisig/multisig-fwp-wstx-alex-50-50-v1-01.clar"
 depends_on = [
-  "fwp-wstx-alex-50-50",
-  "fixed-weight-pool"
+  "fwp-wstx-alex-50-50-v1-01",
+  "fixed-weight-pool-v1-01"
 ]
 
-[contracts.fwp-wstx-wbtc-50-50]
-path = "contracts/pool-token/fwp-wstx-wbtc-50-50.clar"
+[contracts.fwp-wstx-wbtc-50-50-v1-01]
+path = "contracts/pool-token/fwp-wstx-wbtc-50-50-v1-01.clar"
 depends_on = [ "trait-sip-010", "trait-ownable" ]
 
-[contracts.multisig-fwp-wstx-wbtc-50-50]
-path = "contracts/multisig/multisig-fwp-wstx-wbtc-50-50.clar"
+[contracts.multisig-fwp-wstx-wbtc-50-50-v1-01]
+path = "contracts/multisig/multisig-fwp-wstx-wbtc-50-50-v1-01.clar"
 depends_on = [
-  "fwp-wstx-wbtc-50-50",
-  "fixed-weight-pool"
+  "fwp-wstx-wbtc-50-50-v1-01",
+  "fixed-weight-pool-v1-01"
 ]
 
 [contracts.multisig-fwp-alex-usda-50-50]
@@ -503,7 +503,7 @@ depends_on = [ "trait-sip-010", "trait-ownable" ]
 path = "contracts/multisig/multisig-fwp-wstx-usda-50-50.clar"
 depends_on = [
   "fwp-wstx-usda-50-50",
-  "fixed-weight-pool"
+  "fixed-weight-pool-v1-01"
 ]
 
 [contracts.fwp-alex-usda-50-50]
@@ -524,7 +524,7 @@ depends_on = [ "trait-sip-010", "trait-ownable" ]
 
 [contracts.swap-helper]
 path = "contracts/helpers/swap-helper.clar"
-depends_on = [ "trait-sip-010", "fixed-weight-pool", "simple-weight-pool", "simple-weight-pool-alex" ]
+depends_on = [ "trait-sip-010", "fixed-weight-pool-v1-01", "simple-weight-pool", "simple-weight-pool-alex" ]
 
 [contracts.simple-equation]
 path = "contracts/equations/simple-equation.clar"
